--- a/tasks/install.yum.yml
+++ b/tasks/install.yum.yml
@@ -1,21 +1,32 @@
 ---
 
 - name: Install requirements (RedHat)
-  yum: name={{item}}
-  with_items: [openvpn, openssl, zip]
+  yum:
+    name: "{{ requirements }}"
+    update_cache: true
+  vars:
+    requirements:
+      - openvpn
+      - openssl
+      - zip
 
 - name: Install dependencies (RedHat)
-  yum: name=python-passlib
-  when: openvpn_use_pam_users|length
+  yum:
+    name: python-passlib
+  when: openvpn_use_pam_users | length > 0
 
 - name: Install easy-rsa package
-  yum: name=easy-rsa
-  when: openvpn_use_system_easyrsa
+  yum:
+    name: easy-rsa
+  when: openvpn_use_system_easyrsa == true
 
 - name: Install LDAP dependencies (RedHat)
-  yum: name=openvpn-auth-ldap
-  when: openvpn_use_ldap
+  yum:
+    name: openvpn-auth-ldap
+  when: openvpn_use_ldap == true
 
 - name: Install bridge dependencies (RedHat)
-  yum: name=bridge-utils
-  when: openvpn_bridge
+  yum:
+    name: bridge-utils
+  when: openvpn_bridge == true
+
