--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,11 @@
 ---
+
 language: python
 python: "2.7"
-before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt python-pycurl
+
 install:
-  - pip install ansible>=1.6.0
+  - pip install docker molecule
+
 script:
-  # Prepare tests
-  - echo localhost > inventory
+  - molecule test
 
-  # Check syntax
-  - ansible-playbook --syntax-check -i inventory test.yml
-
-  # First run
-  - ansible-playbook -i inventory test.yml --connection=local --sudo
-
-  - sudo cat /var/log/openvpn.log
-
-  # Second run Idempotence test
-  - >
-    ansible-playbook -i inventory test.yml --connection=local --sudo
-    | grep -q 'changed=0.*failed=0'
-    && (echo 'Idempotence test: pass' && exit 0)
-    || (echo 'Idempotence test: fail' && exit 1)
-
-  - ps -ef | grep [o]penvpn || exit 1
-
-openvpn_dev: tap
