--- a/tasks/setup-bridge.deb.yml
+++ b/tasks/setup-bridge.deb.yml
@@ -1,20 +1,16 @@
 ---
 
 - name: Setup bridge
-  when: openvpn_bridge
   template:
     src: bridge-interface.deb.j2
     dest: "/etc/network/interfaces.d/{{ openvpn_dev }}"
-  register: bridge
-  tags: [bridge]
+  when: openvpn_bridge == true
+  notify: restart networking debian
+  tags: bridge
 
-- name: Restart networking
-  service: name=networking state=restarted
-  when: openvpn_bridge and bridge|changed
-  tags: [bridge]
-
-- file:
+- name: Remove interface configuration for "{{ openvpn_dev }}"
+  file:
     path: "/etc/network/interfaces.d/{{ openvpn_dev }}"
     state: absent
-  when: not openvpn_bridge
-  tags: [bridge]
+  when: openvpn_bridge == false
+  tags: bridge
