--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@
 language: python
 python: "2.7"
 
+env:
+  - MOLECULE_DISTRO=ubuntu1604
+  - MOLECULE_DISTRO=debian9
 install:
   - pip install docker molecule
 
