moving condition to template and keeping only required parts

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -102,14 +102,8 @@
   template:
     src: openvpn.pam.j2
     dest: /etc/pam.d/openvpn
-  when: openvpn_use_pam and ansible_os_family == 'Debian'
-
-- name: Setup PAM
-  copy:
-    remote_src: True
-    src: /etc/pam.d/login
-    dest: /etc/pam.d/openvpn
-  when: openvpn_use_pam and ansible_os_family == 'RedHat'
+  when: openvpn_use_pam
+  notify: openvpn restart
 
 - name: Configure users
   htpasswd:
