--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python: "2.7"
 env:
   - MOLECULE_DISTRO=ubuntu1604
   - MOLECULE_DISTRO=debian9
+  - MOLECULE_DISTRO: centos7
 install:
   - pip install docker molecule
 
