--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -82,5 +82,5 @@ openvpn_simple_auth_password: ""
 openvpn_unified_client_profiles: false
 
 # Download the created client credentials to the specified directory
-openvpn_download_clients: no
+openvpn_download_clients: false
 openvpn_download_dir: "client_credentials/"
