--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -37,8 +37,8 @@
   fetch:
     src: "{{ openvpn_keydir }}/{{ item.item }}.zip"
     dest: "{{ openvpn_download_dir }}"
-    flat: yes
-    validate_checksum: yes
+    flat: true
+    validate_checksum: true
   when:
     - item is changed
     - done_packing == true
@@ -51,8 +51,8 @@
   fetch:
     src: "{{ openvpn_keydir }}/{{ item.item }}.ovpn"
     dest: "{{ openvpn_download_dir }}"
-    flat: yes
-    validate_checksum: yes
+    flat: true
+    validate_checksum: true
   when:
     - item is changed
     - done_packing == true
