--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -1,31 +1,17 @@
 ---
 
-- name: Include OS-specific variables.
-  include_vars: "{{ lookup('first_found', paths) }}"
-  vars:
-    paths:
-      - "vars/{{ ansible_distribution }}.{{
-            ansible_lsb.codename | default(omit)}}.yml"
-      - "vars/{{ ansible_distribution }}.yml"
-      - "vars/{{ ansible_os_family }}.yml"
-      - "vars/Common-default.yml"
+- include_tasks: variables.yml
 
-- include: install.deb.yml
-  when: ansible_os_family == 'Debian'
+- include_tasks: assertions.yml
 
-- include: install.yum.yml
-  when: ansible_os_family == 'RedHat'
+- include_tasks: "{{ ansible_os_family }}/install.yml"
 
-- include: configure.yml
+- include_tasks: easy-rsa.yml
 
-- include: setup-bridge.deb.yml
-  when: ansible_os_family == 'Debian'
+- include_tasks: clients.yml
 
-- include: setup-bridge.rh.yml
-  when: ansible_os_family == 'RedHat'
+- include_tasks: configure.yml
 
-- name: Ensure OpenVPN is started
-  service:
-    name: "{{ openvpn_service }}"
-    state: started
-    enabled: true
+- include_tasks: "{{ ansible_os_family }}/setup-bridge.yml"
+
+- include_tasks: service.yml
