--- a/tasks/Debian/install.yml
+++ b/tasks/Debian/install.yml
@@ -12,7 +12,7 @@
     repo: deb http://swupdate.openvpn.net/apt "{{ ansible_lsb.codename }}" main
   when: openvpn_use_external_repo == true
 
-- name: Install requirements (Debian)
+- name: Install requirements
   apt:
     name: "{{ requirements }}"
     update_cache: true
@@ -24,7 +24,7 @@
       - openssl
       - zip
 
-- name: Install dependencies (Debian)
+- name: Install PAM dependencies
   apt:
     name: "{{ dependencies }}"
     force: true
@@ -39,13 +39,13 @@
     name: easy-rsa
   when: openvpn_use_system_easyrsa == true
 
-- name: Install LDAP dependencies (Debian)
+- name: Install LDAP dependencies
   apt:
     name: openvpn-auth-ldap
     force: true
   when: openvpn_use_ldap == true
 
-- name: Install bridge dependencies (Debian)
+- name: Install bridge dependencies
   apt:
     name: bridge-utils
   when: openvpn_bridge == true
