--- a/tasks/variables.yml
+++ b/tasks/variables.yml
@@ -1,11 +1,15 @@
 ---
 
 - name: Include OS-specific variables.
-  include_vars: "{{ lookup('first_found', paths) }}"
+  include_vars:
+    file: "{{ lookup('first_found', params) }}"
   vars:
-    paths:
-      - "vars/{{ ansible_distribution }}.{{
-            ansible_lsb.codename | default(omit)}}.yml"
-      - "vars/{{ ansible_distribution }}.yml"
-      - "vars/{{ ansible_os_family }}.yml"
-      - "vars/Common-default.yml"
+    params:
+      files:
+        - "{{ ansible_distribution }}.{{
+              ansible_lsb.codename | default(omit)}}.yml"
+        - "{{ ansible_distribution }}.yml"
+        - "{{ ansible_os_family }}.yml"
+        - "Common-default.yml"
+      paths:
+        - 'vars/os'
