--- a/tasks/Debian/setup-bridge.yml
+++ b/tasks/Debian/setup-bridge.yml
@@ -4,11 +4,11 @@
   template:
     src: bridge-interface.deb.j2
     dest: "/etc/network/interfaces.d/{{ openvpn_dev }}"
-  when: openvpn_bridge == true
+  when: openvpn_bridge
   notify: restart networking debian
 
 - name: Remove interface configuration for "{{ openvpn_dev }}"
   file:
     path: "/etc/network/interfaces.d/{{ openvpn_dev }}"
     state: absent
-  when: openvpn_bridge == false
+  when: not openvpn_bridge
