--- a/tasks/clients.yml
+++ b/tasks/clients.yml
@@ -17,7 +17,7 @@
     creates: "{{ openvpn_keydir }}"
 
 - name: Generate tls-auth key
-  command: openvpn --genkey --secret {{ openvpn_tls_key }}
+  command: openvpn --genkey --secret {{ openvpn_keydir }}/{{ openvpn_tls_key }}
   args:
     creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}"
   when: openvpn_tls_auth == true
