More linter happiness

--- a/tasks/clients.yml
+++ b/tasks/clients.yml
@@ -17,10 +17,11 @@
     creates: "{{ openvpn_keydir }}"
 
 - name: Generate tls-auth key
-  command: openvpn --genkey --secret {{ openvpn_keydir }}/{{ openvpn_tls_key }}
+  command:
+    openvpn --genkey --secret "{{ openvpn_keydir }}/{{ openvpn_tls_key }}"
   args:
     creates: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}"
-  when: openvpn_tls_auth == true
+  when: openvpn_tls_auth
 
 - name: Generate Clients keys
   command: "{{ openvpn_etcdir }}/build-client.sh {{ item }}"
@@ -35,7 +36,7 @@
   loop: "{{ openvpn_clients_revoke }}"
 
 - include: read-client-files.yml
-  when: openvpn_unified_client_profiles == true
+  when: openvpn_unified_client_profiles
 
 - name: Create client configuration directory if requested
   file:
@@ -56,4 +57,3 @@
   loop: "{{ openvpn_clients }}"
   notify: openvpn pack clients
   register: openvpn_clients_changed
-
