--- a/tasks/Debian/install.yml
+++ b/tasks/Debian/install.yml
@@ -4,13 +4,13 @@
   apt_key:
     id: E158C569
     url: https://swupdate.openvpn.net/repos/repo-public.gpg
-  when: openvpn_use_external_repo == true
+  when: openvpn_use_external_repo | bool
 
 - name: Add OpenVPN repo sources
   apt_repository:
     filename: openvpn
     repo: deb http://swupdate.openvpn.net/apt "{{ ansible_lsb.codename }}" main
-  when: openvpn_use_external_repo == true
+  when: openvpn_use_external_repo | bool
 
 - name: Install requirements
   apt:
@@ -37,16 +37,15 @@
 - name: Install easy-rsa package
   apt:
     name: easy-rsa
-  when: openvpn_use_system_easyrsa == true
+  when: openvpn_use_system_easyrsa | bool
 
 - name: Install LDAP dependencies
   apt:
     name: openvpn-auth-ldap
     force: true
-  when: openvpn_use_ldap == true
+  when: openvpn_use_ldap | bool
 
 - name: Install bridge dependencies
   apt:
     name: bridge-utils
-  when: openvpn_bridge == true
-
+  when: openvpn_bridge | bool
