--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,8 +19,7 @@ galaxy_info:
       versions:
         - jessie
         - stretch
-  categories:
+  galaxy_tags:
     - system
     - networking
 dependencies: []
-
