--- a/tasks/RedHat/install.yml
+++ b/tasks/RedHat/install.yml
@@ -18,15 +18,14 @@
 - name: Install easy-rsa package
   yum:
     name: easy-rsa
-  when: openvpn_use_system_easyrsa == true
+  when: openvpn_use_system_easyrsa | bool
 
 - name: Install LDAP dependencies
   yum:
     name: openvpn-auth-ldap
-  when: openvpn_use_ldap == true
+  when: openvpn_use_ldap | bool
 
 - name: Install bridge dependencies
   yum:
     name: bridge-utils
-  when: openvpn_bridge == true
-
+  when: openvpn_bridge| bool
