--- a/tasks/read-client-files.yml
+++ b/tasks/read-client-files.yml
@@ -1,6 +1,6 @@
 ---
 - name: Read CA file.
-  command: cat {{ openvpn_keydir }}/ca.crt
+  command: cat "{{ openvpn_keydir }}/ca.crt"
   no_log: true
   register: openvpn_read_ca_file_results
   changed_when: false
@@ -11,7 +11,7 @@
   no_log: true
   register: openvpn_read_tlsauth_file_results
   changed_when: false
-  when: openvpn_tls_auth == true
+  when: openvpn_tls_auth
 
 - name: Read client cert files.
   command: >-
@@ -49,5 +49,4 @@
         | b64decode
         | default('')
       }}
-  when: openvpn_tls_auth == true
-
+  when: openvpn_tls_auth
