--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -46,7 +46,7 @@
 - name: Set ip forwarding in the sysctl file and reload if necessary
   sysctl:
     name: net.ipv4.ip_forward
-    value: 1
+    value: '1'
     sysctl_set: true
     state: present
     reload: true
