--- a/tasks/openvpn.yml
+++ b/tasks/openvpn.yml
@@ -12,9 +12,6 @@
 
 - include_tasks: configure.yml
 
-- include_tasks: "{{ ansible_os_family }}/setup-bridge.yml"
-
-- include: firewall.yml
-  when: openvpn_route_traffic | bool
+- include_tasks: firewall.yml
 
 - include_tasks: service.yml
