--- a/tasks/core/read-client-files.yml
+++ b/tasks/core/read-client-files.yml
@@ -1,5 +1,5 @@
 ---
-- name: Read CA file.
+- name: Read CA file
   command: cat "{{ openvpn_keydir }}/ca.crt"
   no_log: true
   register: openvpn_read_ca_file_results
@@ -7,17 +7,17 @@
 
 - name: Read TLS-auth key
   slurp:
-    src: "{{ openvpn_keydir }}/{{ openvpn_tls_key }}"
+    src: "{{ openvpn_etcdir }}/ovpns/{{ openvpn_tls_key }}"
   no_log: true
   register: openvpn_read_tlsauth_file_results
   changed_when: false
   when: openvpn_tls_auth
 
-- name: Read client cert files.
+- name: Read client cert files
   command: >-
     sed -n
     '/-----BEGIN CERTIFICATE-----/,/-----END CERTIFICATE-----/p'
-    {{ openvpn_keydir }}/{{ item }}.crt
+    {{ openvpn_keydir }}/issued/{{ item }}.crt
   args:
     warn: false
   no_log: true
@@ -25,14 +25,14 @@
   register: openvpn_read_client_cert_files_results
   loop: "{{ openvpn_clients }}"
 
-- name: Read client key files.
-  command: cat {{ openvpn_keydir }}/{{ item }}.key
+- name: Read client key files
+  command: cat {{ openvpn_keydir }}/private/{{ item }}.key
   no_log: true
   changed_when: false
   register: openvpn_read_client_key_files_results
   loop: "{{ openvpn_clients }}"
 
-- name: Set client cert and CA info as fact.
+- name: Set client cert and CA info as fact
   set_fact:
     openvpn_ca_file_contents:
       "{{ openvpn_read_ca_file_results.stdout }}"
@@ -41,7 +41,7 @@
     openvpn_client_keys_output:
       "{{ openvpn_read_client_key_files_results.results }}"
 
-- name: Set tls auth file contents as fact.
+- name: Set tls auth file contents as fact
   set_fact:
     openvpn_tls_auth_file_contents: >-
       {{
