Uses role to install git in tests

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,6 +3,4 @@
 - name: Prepare
   hosts: all
   tasks:
-    - name: Install git
-      package:
-        name: git
+    - include_role: geerlingguy.git
